# bi-analytics-bot

./: .gitignore  DEPLOYMENT.md  QUICK_START.md  README.md  SESSION_SUMMARY.md  dataframe-analysis-colab.ipynb  docker-compose.yml  job-requirements.txt  render.yaml  resume.txt  vercel.json
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: datasets.py  query.py
backend/app/core/: exceptions.py  sql_validator.py
backend/app/models/: base.py  dataset.py
backend/app/schemas/: dataset.py
backend/app/services/: chart_advisor.py  data_cleaner.py  data_profiler.py  data_transformer.py  data_validator.py  embedding_service.py  etl_pipeline.py  insight_generator.py  query_executor.py  rag_service.py  schema_inference.py  sql_generator.py  type_detector.py
backend/app/utils/: logger.py
backend/tests/: test_etl_pipeline.py  test_sql_validator.py
docs/: .env.example  advice.txt 
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/chat/: ChatMessage.tsx
frontend/src/components/explore/: DatasetCard.tsx  DatasetPreview.tsx  EmbeddingsViewer.tsx  SchemaViewer.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/query/: QueryResults.tsx
frontend/src/components/upload/: ETLReportView.tsx
frontend/src/components/visualization/: ChartRenderer.tsx  DataTable.tsx
frontend/src/lib/: api.ts
frontend/src/store/: app.ts
