[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bi-analytics-bot"
version = "1.0.0"
description = "AI-powered BI analytics platform with natural language querying"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "psycopg>=3.0.0,<4.0.0",
    "python-dotenv==1.0.0",
    "pandas==2.1.3",
    "numpy==1.26.2",
    "langchain==0.1.0",
    "langchain-openai>=0.0.5,<0.2.0",
    "openai>=1.10.0,<2.0.0",
    "python-dateutil==2.8.2",
    "fuzzywuzzy==0.18.0",
    "python-levenshtein==0.21.1",
    "httpx==0.25.2",
    "alembic==1.12.1",
    "chardet==5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.1",
    "ruff==0.1.8",
]

[tool.hatch.version]
path = "app/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
